--- a/customer/src/main/resources/ite/jp/ak/lab06/customer/customer-view.fxml
+++ b/customer/src/main/resources/ite/jp/ak/lab06/customer/customer-view.fxml
@@ -115,7 +115,7 @@
                               <TableColumn fx:id="toReturnNameTableColumn" prefWidth="161.0" text="Nazwa produktu" />
                            </columns>
                         </TableView>
-                        <Button layoutX="637.0" layoutY="456.0" mnemonicParsing="false" text="Przejdź do kasy">
+                        <Button layoutX="637.0" layoutY="456.0" mnemonicParsing="false" onAction="#acceptOrder" text="Przejdź do kasy">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -128,9 +128,38 @@
                      </children></AnchorPane>
             </content>
           </Tab>
-            <Tab text="Paragony">
+            <Tab fx:id="receiptsTab" text="Paragony">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="receiptsOrderTableView" layoutX="14.0" layoutY="21.0" onMouseClicked="#onSelectedReceiptOrder" prefHeight="591.0" prefWidth="304.0">
+                          <columns>
+                            <TableColumn fx:id="receiptsOrderIdTableColumn" prefWidth="122.0" text="ID zamówienia" />
+                            <TableColumn fx:id="receiptsOrderStatusTableColumn" prefWidth="177.0" text="Status Zamówienia" />
+                          </columns>
+                        </TableView>
+                        <Label layoutX="385.0" layoutY="21.0" text="Informacje o paragonie">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="sellerIdLabel" layoutX="385.0" layoutY="86.0" text="ID sprzedawcy: ">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TableView fx:id="boughtProductsTableView" layoutX="385.0" layoutY="194.0" prefHeight="200.0" prefWidth="200.0">
+                          <columns>
+                            <TableColumn fx:id="boughtProductsNameTableColumn" prefWidth="199.0" text="Nazwa" />
+                          </columns>
+                        </TableView>
+                        <Label layoutX="385.0" layoutY="160.0" text="Zakupione produkty">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
               </content>
             </Tab>
         </tabs>
